# Recepteskonyv

./: CMakeLists.txt  Ingridient.c  Ingridient.h  Menu.c  Menu.h  Receptes Könyv.docx  Recipe.c  Recipe.h  RecipeIngridient.c  RecipeIngridient.h  input.c  input.h  main.c  ~$ceptes Könyv.docx
